Fix article list alignment

--- a/theme/static/style.css
+++ b/theme/static/style.css
@@ -60,7 +60,6 @@ a:hover {
 
 .content p {
   /*margin: 10px 0 10px 0;*/
-  width: 96vw;
 }
 
 #title {
